--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@ Random Thoughts
  #prev-index-page, #next-index-page { border: 1px solid #1abc9c; width: fit-content; padding:0 0.5em; margin:0.5em; display:inline; }
 </style>
 
-    <script type="text/javascript" id="MathJax-script" async
-      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
-    </script>
   </head>
   <body>
     <div class="page-header">
@@ -62,5 +59,19 @@ Random Thoughts
 </div>
 
 
+
+    <!-- MathJax -->
+    <script type="text/javascript" id="MathJax-script" async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54158408-2"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+
+     gtag('config', 'UA-54158408-2');
+    </script>
   </body>
 </html>
