--- a/tags.html
+++ b/tags.html
@@ -27,9 +27,6 @@ Tags
  .tag-list a {background:#eee; display:inline-block; margin-right: 0.5em; padding:0.1em 0.3em; }
 </style>
 
-    <script type="text/javascript" id="MathJax-script" async
-      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
-    </script>
   </head>
   <body>
     <div class="page-header">
@@ -61,5 +58,19 @@ Tags
   </div>
 </div>
 
+
+    <!-- MathJax -->
+    <script type="text/javascript" id="MathJax-script" async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54158408-2"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+
+     gtag('config', 'UA-54158408-2');
+    </script>
   </body>
 </html>
