--- a/index.html
+++ b/index.html
@@ -73,5 +73,16 @@ Random Thoughts
 
      gtag('config', 'UA-54158408-2');
     </script>
+    <!-- Baidu Tongji -->
+    <script>
+     var _hmt = _hmt || [];
+     (function() {
+       var hm = document.createElement("script");
+       hm.src = "https://hm.baidu.com/hm.js?71cde9830e1f38c9b221181924f70f2a";
+       var s = document.getElementsByTagName("script")[0]; 
+       s.parentNode.insertBefore(hm, s);
+     })();
+    </script>
+
   </body>
 </html>
