--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
 Random Thoughts
 </title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/typo.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="/assets/css/pygments.css" type="text/css" media="screen" />
-    <style type="text/css" media="screen">
+    
+<style>
+ .post-container{ padding:3% 7%; position:relative; margin-bottom:1em; background:#fff; }
+ .post-preview{ max-height:70em; overflow:hidden; }
+ .post-readmore{ border: 1px solid #1abc9c; width: fit-content; padding:0 0.5em; margin-top:1em; }
+ #index-nav { text-align: center; }
+ #prev-index-page, #next-index-page { border: 1px solid #1abc9c; width: fit-content; padding:0 0.5em; margin:0.5em; display:inline; }
+</style>
+
+    <style>
      html{ background:#eee; }
      body{ width:90%; max-width:960px; margin:3em auto 0; padding-top:2em; }
      pre{white-space:pre-wrap;}
@@ -18,16 +28,16 @@ Random Thoughts
      .nav-left .nav-item {padding:0.5em;}
      .nav-right {list-style-type: none; padding: 0; overflow: hidden; margin-top:-2.5em; margin-bottom:1em;}
      .nav-right li{float: right;}
-    </style>
-    
-<style type="text/css" media="screen">
- .post-container{ padding:3% 7%; position:relative; margin-bottom:1em; background:#fff; }
- .post-preview{ max-height:70em; overflow:hidden; }
- .post-readmore{ border: 1px solid #1abc9c; width: fit-content; padding:0 0.5em; margin-top:1em; }
- #index-nav { text-align: center; }
- #prev-index-page, #next-index-page { border: 1px solid #1abc9c; width: fit-content; padding:0 0.5em; margin:0.5em; display:inline; }
-</style>
 
+     @media only screen and (max-width: 640px) {
+       table{ word-break:break-all;word-wrap:break-word;font-size:12px; }
+       .typo table th, .typo table td, .typo-table th, .typo-table td .typo table caption {
+         padding: 0.5em;
+       }
+       #post-toc {display:none; }
+       .nav-left .nav-item {display:none; }
+     }
+    </style>
   </head>
   <body>
     <div class="page-header">
