--- a/tags.html
+++ b/tags.html
@@ -42,7 +42,7 @@ Tags
     <div class="page-header">
       <ul class="nav-left">
         <li class="nav-home">
-          <a href="/">Ramdom Thoughts</a>
+          <a href="/">Random Thoughts</a>
         </li>
         <li class="nav-item">
           <a href="/tags.html">Tags</a>
