--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Random Thoughts
     <div class="page-header">
       <ul class="nav-left">
         <li class="nav-home">
-          <a href="/">Ramdom Thoughts</a>
+          <a href="/">Random Thoughts</a>
         </li>
         <li class="nav-item">
           <a href="/tags.html">Tags</a>
