--- a/tags.html
+++ b/tags.html
@@ -58,7 +58,7 @@ Tags
       </ul>
     </div>
     
-<div class="tag-container">
+<div class="tag-container typo">
   <div class="tag-list">
     
   </div>
